--- a/app/src/main/res/layout/item_date_header.xml
+++ b/app/src/main/res/layout/item_date_header.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="8dp">
+    android:paddingTop="8dp"
+    android:paddingBottom="4dp">
 
     <TextView
         android:id="@+id/dateText"
