--- a/app/src/main/res/layout/fragment_ai.xml
+++ b/app/src/main/res/layout/fragment_ai.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginBottom="64dp"
     tools:context=".ui.ai.AiFragment">
 
     <TextView
