--- a/app/src/main/res/layout/fragment_photos.xml
+++ b/app/src/main/res/layout/fragment_photos.xml
@@ -10,5 +10,6 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="64dp"
-        android:scrollbars="vertical" />
+        android:scrollbars="vertical"
+        android:scrollbarThumbVertical="@android:color/darker_gray"/>
 </RelativeLayout>
